<resources>
    <string name="app_name">Robyn</string>
    <string name="title_activity_main">Robyn</string>
    <string name="registrarBtn">Registrarse</string>
    <string name="ingresarBtn">Ingresar</string>
    <string name="orSptr">O</string>
    <string name="ToSConfirmationAcceptPrompt">Acepto</string>
    <string name="ToSConfirmationDeclinePrompt">No Acepto</string>
    <string name="ToSConfirmationTitlePrompt">Terminos y Condiciones</string>
    <string name="ToSConfirmationTextPrompt">Desea aceptar los <a href=''>Terminos y Condiciones</a> de uso?</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nextStep">Siguiente</string>
    <string name="stepBack">Atras</string>
    <string name="ask">Consultar</string>
    <string name="name_reg_placeholder">Nombre Completo</string>
    <string name="lastname_reg_placeholder">Apellido Completo</string>
    <string name="email_reg_placeholder">Correo Electronico</string>
    <string name="pass_reg_placeholder">Contraseña</string>
    <string name="confpass_reg_placeholder">Repita Contraseña</string>
</resources>